--- a/camera-ready-instructions.html
+++ b/camera-ready-instructions.html
@@ -16,8 +16,8 @@ layout: default
           <div class="section-content">
             <article class="event nearest">
               <figure class="date">
-                <div class="month">Mar</div>
-                <div class="day">18</div>
+                <div class="month">apr</div>
+                <div class="day">1</div>
               </figure>
               <aside>
                 <header>
@@ -62,22 +62,22 @@ layout: default
 <div class="row">
 <div class="col-md-12 text-center">
   <ul class="text-left" style="display:inline-block;vertical-align:middle;">
-    <li>Your paper MUST be formatted using one of the templates available in the "Call for Papers" <a href = "https://scfab.github.io/2019/papers.html"><b style="color:red">section</b></a>. These template files are a variant of the ACM style that provide a consistent look and feel for our proceedings. Please do not use your own style file or one of the "standard" ACM ones. </li>
+    <li>Your paper MUST be formatted using one of the templates available in the "Call for Papers" <a href = "https://scfab.github.io/2020/papers.html"><b style="color:red">section</b></a>. These template files are a variant of the ACM style that provide a consistent look and feel for our proceedings. Please do not use your own style file or one of the "standard" ACM ones. </li>
     <li> Your papers should be submitted as .pdfs and the PDF MUST have the correct copyright statement on the bottom of the first page left column which should read as follows: <br>
-    <b>This article is published under a Creative Commons Attribution License (http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well allowing derivative works, provided that you attribute the original work to the author(s) and FAB 2019.
-    Second International Symposium on Foundations and Applications of Blockchain (FAB ‘19)
-    April 5, 2019, Los Angeles, California, USA. </b> </li>
+    <b>This article is published under a Creative Commons Attribution License (http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well allowing derivative works, provided that you attribute the original work to the author(s) and FAB 2020.
+    Third International Symposium on Foundations and Applications of Blockchain (FAB ‘20)
+    May 1, 2020, Santa Cruz, California, USA. </b> </li>
     <li> Do not include page numbers.</li>
-    <li>Name your file according to this rule: <b>FAB2019-paperID-firstauthorlastname.pdf</b>.</li>
+    <li>Name your file according to this rule: <b>FAB2020-paperID-firstauthorlastname.pdf</b>.</li>
     <li> The page limit restrictions still stand and are strict and final. </b></li>
-    <li>Please use the paper-submission site to upload your final camera-ready copy. If you have any other question regarding the proceedings, please contact the publication and proceedings chair (Sumita Barahmand sumita [dot] barahmand [at] gmail [dot] com) or the PC chairs immediately. Don't wait! </li>
+    <li>Please use the paper-submission site to upload your final camera-ready copy. If you have any other question regarding the proceedings, please contact the publication and proceedings chair or the PC chairs immediately. Don't wait! </li>
     <li>At least one of the authors must register for the symposium to present their work. </li>
   </ul>
   </div>
   </div>
 
 <h4 class="section-heading text-uppercase">Questions?</h4>
-Email any questions you have to the PC chairs at shahram [at] usc [dot] edu or slaats [at] di [dot] ku [dot] dk.
+Email any questions you have to the PC chairs.
           </div><!-- /.section-content -->
         </section><!-- /.main-content -->
       </div><!-- /.col-md-6 -->
