--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: default
           <div class="section-content">
             <article class="event nearest">
               <figure class="date">
-                <div class="month">dec</div>
-                <div class="day">10</div>
+                <div class="month">feb</div>
+                <div class="day">17</div>
               </figure>
               <aside>
                 <header>
@@ -29,8 +29,8 @@ layout: default
             <br>
             <article class="event nearest">
               <figure class="date">
-                <div class="month">feb</div>
-                <div class="day">12</div>
+                <div class="month">mar</div>
+                <div class="day">5</div>
               </figure>
               <aside>
                 <header>
@@ -41,8 +41,8 @@ layout: default
             <br>
             <article class="event nearest">
               <figure class="date">
-                <div class="month">Mar</div>
-                <div class="day">18</div>
+                <div class="month">apr</div>
+                <div class="day">1</div>
               </figure>
               <aside>
                 <header>
@@ -53,8 +53,8 @@ layout: default
             <br>
             <article class="event nearest-second">
               <figure class="date">
-                <div class="month">Apr</div>
-                <div class="day">5</div>
+                <div class="month">may</div>
+                <div class="day">1</div>
               </figure>
               <aside>
                 <header>
@@ -86,8 +86,8 @@ layout: default
       <div class="col-md-6">
         <section id="main-content">
           <div class="section-content">
-            <header><h2>Second International Symposium on Foundations and Applications of
-                    Blockchain 2019 (FAB '19)</h2></header>
+            <header><h2>Third International Symposium on Foundations and Applications of
+                    Blockchain 2020 (FAB '20)</h2></header>
             <p>
             Blockchain - the technology behind Bitcoin and Ethereum - is
             flourishing into an impressive spectrum of research projects
