--- a/schedule.html
+++ b/schedule.html
@@ -12,14 +12,8 @@ layout: default
     <section id="main-content">
       <div class="section-content">
         <h2>Symposium Schedule</h2>
-        <p><a href="https://minghsiehee.usc.edu/visiting/">Hughes Aircraft Electrical Engineering Center (EEB), Room No: 132</a>,
-        University of Southern California.
         <br><br>
-        The <a href="assets/papers/FAB2019Proceedings.pdf" target="_blank"
-             style="color:red;text-decoration:underline;">conference proceedings</a> is available <a href="assets/papers/FAB2019Proceedings.pdf" target="_blank"
-                  style="color:red;text-decoration:underline;">online</a>.</p>
-        {% include session.html date="Friday, April 5th" key="day1"
-        showlinks="true" %}
+        TBA
       </div><!-- /.section-content -->
     </section><!-- /.main-content -->
   </div><!-- /.col-md-9 -->
