changes to remove past years info

--- a/accommodation.html
+++ b/accommodation.html
@@ -14,20 +14,6 @@ layout: default
           <header>
             <h2>Dates</h2>
           </header>
-          <div class="section-content">
-            <article class="event nearest">
-              <figure class="date">
-                <div class="month">Mar</div>
-                <div class="day">18</div>
-              </figure>
-              <aside>
-                <header>
-                  Discounted rate available
-                </header>
-              </aside>
-            </article>
-			<br>
-          </div>
         </section><!-- /.events-small -->
 
        <br/>
@@ -38,24 +24,7 @@ layout: default
           <header>
             <h1>Accommodation</h1>
           </header>
-          <div class="row">
-<p> We have secured a discount for <a href="https://uschotel.usc.edu/">USC Hotel</a>. The following information should be used to reserve accomodation at a discounted price:</p>
-<div class="col-md-12 text-center">
-<ul class="text-left" style="display:inline-block;vertical-align:middle;">
-  <li>Use the discount code <b>FAB '19 Symposium Group</b> at the following <a href= "https://be.synxis.com/?Hotel=5374&Chain=24206&arrive=4/4/2019&depart=4/6/2019&group=1904VITFAB"> reservation link </a>.</li>
-  <li>Payment: Individuals will pay on own for all charges. </li>
-  <li>Parking available at $25 per night, all guest pay on own for parking.</li>
-  <li>Last day to make reservations under the groups discounted rate is <b> March 18,2019</b>.</li>
-</ul>
-<a class="btn btn-large"
-   href='https://be.synxis.com/?Hotel=5374&Chain=24206&arrive=4/4/2019&depart=4/6/2019&group=1904VITFAB'
-   target='_blank' title='USC Hotel
-   registration'><span
-   id='regLink'>USC Hotel Reservation</span>
-</a>
-</div>
-<p>USC is only about 3-4 miles from Downtown Los Angeles, out-of-town attendees may also wish to consider hotels in the downtown area.</p>
-</div>
+          TBA
         </section><!-- /.main-content -->
       </div><!-- /.col-md-6 -->
 
