--- a/keynotes.html
+++ b/keynotes.html
@@ -12,20 +12,7 @@ layout: default
     <section id="main-content">
       <div class="section-content">
         <h2>Keynote Speakers</h2>
-        {% include keynote-speaker.html key="amrelabbadi"
-        photo="assets/img/amrsmall.jpg" %}
-        {% include keynote-speaker.html key="david"
-        photo="assets/img/galindo-david.jpg" %}
-        {% include keynote-speaker.html key="stephanie"
-        photo="assets/img/Stephanie-Hurder.jpeg" %}
-        {% include keynote-speaker.html key="gilperez"
-        photo="assets/img/gil_perez_160_160.png" %}
-        {% include keynote-speaker.html key="sarabjeet"
-        photo="assets/img/sarabjeet.png" %}
-        {% include keynote-speaker.html key="erez"
-        photo="assets/img/no-image-icon-0.png" %}
-        {% include keynote-speaker.html key="ingoweber"
-        photo="assets/img/ingo.jpg" %}
+        TBA
       </div><!-- /.section-content -->
     </section><!-- /.main-content -->
   </div><!-- /.col-md-9 -->
