--- a/location.html
+++ b/location.html
@@ -14,24 +14,11 @@ layout: default
             <h1>Location</h1>
           </header>
           <div class="section-content">
-            <p>FAB '19 will be held at <a
-                href="https://www.usc.edu/">USC</a>.
+            <p>FAB '20 will be held at <a
+                href="https://www.ussc.edu/">UC Santa Cruz</a>.
                 Details about the accommodation at the hotel can be
                 found <a href="accommodation.html">here.</a>
             </p>
-			<div class="col-md-6">
-              <div class="google-maps">
-                  <iframe
-                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13225.720308362303!2d-118.28189665111125!3d34.032837344351016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7e49c71a5ed%3A0xaa905a5bb427a2c4!2sUniversity+of+Southern+California!5e0!3m2!1sen!2sus!4v1509335398191"
-                      width="600" height="450" frameborder="0"
-                  style="border:0" allowfullscreen></iframe>
-			  </div>
-            </div>
-			<br>
-			<div class="col-md-6">
-				<div class="google-maps">
-				</div>
-			</div>
 
           </div><!-- /.section-content -->
         </section><!-- /.main-content -->
