--- a/officers.html
+++ b/officers.html
@@ -22,55 +22,22 @@ layout: default
               </h2>
           </header>{%
                   include author-block-no-padding.html
-                  link="http://ceng.usc.edu/~bkrishna/"
-                  name="Bhaskar Krishnamachari"
-                  org="University of Southern
-                  California" %}
+                  link="http://nawab.me"
+                  name="Faisal Nawab"
+                  org="University of California, Santa Cruz" %}
           </div>
           </div>
       </section><!-- /#general-chair -->
       <section id="program-chairs">
-       <header><h2 class="no-divider">Program Co-Chairs</h2></header>
+       <header><h2 class="no-divider">Program Chair</h2></header>
        <div class="row">
        <div class="col-md-6">
          {% include author-block-no-padding.html
-         link="http://perspolis.usc.edu/Users/shahram/" name="Shahram
-         Ghandeharizadeh" org="University of Southern California" %}
-         {% include author-block-no-padding.html
-         link="https://di.ku.dk/english/staff/?pure=en/persons/561613" name="Tijs Slaats" org="University of Copenhagen" %}
+         link="https://users.soe.ucsc.edu/~owen/" name="Owen Arden"
+org="University of California, Santa Cruz" %}
        </div>
        </div>
      </section><!-- /#program-chairs -->
-     <section id="Industrial-chairs">
-      <header><h2 class="no-divider">Industrial Co-chairs</h2></header>
-      <div class="row">
-      <div class="col-md-6">
-        {% include author-block-no-padding.html
-        link="https://www.bell-labs.com/usr/diego.lugones" name="Diego Lugones" org="Nokia-Bell Labs" %}
-        {% include author-block-no-padding.html
-        link="https://www.linkedin.com/in/raghunambiar" name="Raghu Nambiar" org="AMD" %}
-      </div>
-      </div>
-    </section><!-- /#industrial-chairs -->
-      <section id="proceedings-chairs">
-       <header><h2 class="no-divider">Proceedings chair</h2></header>
-       <div class="row">
-       <div class="col-md-6">
-           {% include author-block-no-padding.html
-           link="" name="Sumita
-           Barahmand" org="Microsoft" %}
-       </div>
-       </div>
-      </section><!-- /#proceedings-chair-->
-      <section id="proceedings-chairs">
-       <header><h2 class="no-divider">Web chair</h2></header>
-       <div class="row">
-       <div class="col-md-6">
-           {% include author-block-no-padding.html
-           link="" name="Gowri Sankar Ramachandran" org="University of Southern California" %}
-       </div>
-       </div>
-      </section><!-- /#proceedings-chair-->
      </section><!-- /#members -->
     </div><!-- /#page-main -->
    </div><!-- /.col-md-6 -->
