--- a/program-committee.html
+++ b/program-committee.html
@@ -18,10 +18,8 @@ layout: default
        <div class="row">
        <div class="col-md-6">
            {% include author-block-no-padding.html
-           link="http://perspolis.usc.edu/Users/shahram/" name="Shahram
-           Ghandeharizadeh" org="University of Southern California" %}
-           {% include author-block-no-padding.html
-           link="http://perspolis.usc.edu/Users/shahram/" name="Tijs Slaats" org="University of Copenhagen" %}
+           link="https://users.soe.ucsc.edu/~owen/" name="Owen
+           Arden" org="University of California, Santa Cruz" %}
        </div>
        </div>
       </section><!-- /#program-chairs -->
@@ -32,37 +30,6 @@ layout: default
          <div class="row">
  <div class="col-md-12 text-center">
  <ul class="text-left" style="display:inline-block;vertical-align:middle;">
- <li>Daniel Augot, Inria, France</li>
- <li>Mashael AlSabah, Qatar Computing Research Institute</li>
- <li>Sumita Barahmand, Microsoft</li>
- <li>Eric Chung, DApperNetwork</li>
- <li>Claudio di Ciccio, Vienna University of Economics and Business</li>
- <li>Søren Debois, IT University of Copenhagen</li>
- <li>Ajay Dholakia, Lenovo Data Center Group</li>
- <li>Eric Diehl, Sony Pictures Entertainment</li>
- <li>Marlon Dumas, University of Tartu</li>
- <li>Boris D&uuml;dder, University of Copenhagen</li>
- <li>Luciano Garc&Iacute;a-Ba&ntilde;uelos, University of Tartu</li>
- <li>Vincent Gramoli, University of Sydney</li>
- <li>Abdelkader Hameurlain, Paul Sabatier University, Toulouse, France</li>
- <li>Ming-Deh Huang, USC</li>
- <li>Zhiyuan Jiang, Tsinghua University</li>
- <li>Salil Kanhere, UNSW</li>
- <li>Yaron Kanza, AT&amp;T</li>
- <li>Bhaskar Krishnamachari, USC</li>
- <li>Genevieve Leveille, Otentic8</li>
- <li>Chen Li, UC Irvine</li>
- <li>Ron van der Meyden, University of New South Wales</li>
- <li>Beng Chin Ooi, National University of Singapore</li>
- <li>Charalampos (Babis) Papamanthou, University of Maryland - College Park</li>
- <li>Fabio Porto, Laboratório Nacional de Computação Científica - LNCC</li>
- <li>Jason Potts, RMIT University</li>
- <li>Björn Scheuermann, Humboldt University of Berlin</li>
- <li>Peter Sestoft, IT University of Copenhagen</li>
- <li>Mark Staples, CSIRO</li>
- <li>Vassilis Tsotras, UC Riverside</li>
- <li>Sherry Xu, CSIRO</li>
- <li>Kiran Yedavalli, Cisco</li>
  </ul>
  </div>
  </div>
