--- a/location.html
+++ b/location.html
@@ -15,7 +15,7 @@ layout: default
           </header>
           <div class="section-content">
             <p>FAB '20 will be held at <a
-                href="https://www.ussc.edu/">UC Santa Cruz</a>.
+                href="https://www.ucsc.edu/">UC Santa Cruz</a>.
                 Details about the accommodation at the hotel can be
                 found <a href="accommodation.html">here.</a>
             </p>
