--- a/officers.html
+++ b/officers.html
@@ -13,6 +13,28 @@ layout: default
     <div id="page-main">
      <section id="members">
       <header><h1>Organizing Committee</h1></header>
+      <section id="steering-committee">
+          <div class="row">
+          <div class="col-md-6">
+          <header>
+              <h2  class="no-divider">
+                  Steering Committee
+              </h2>
+          </header>          
+         {% include author-block-no-padding.html
+         link="http://perspolis.usc.edu/Users/shahram/" name="Shahram
+         Ghandeharizadeh" org="University of Southern California" %} 
+         {%
+                  include author-block-no-padding.html
+                  link="http://ceng.usc.edu/~bkrishna/"
+                  name="Bhaskar Krishnamachari"
+                  org="University of Southern
+                  California" %}
+
+          </div>
+
+          </div>
+      </section><!-- /#steering-committee -->
       <section id="general-chair">
           <div class="row">
           <div class="col-md-6">
