--- a/camera-ready-instructions.html
+++ b/camera-ready-instructions.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include slider-cf-camera-ready-instructions.html %}
+{% include slider.html %}
 
 <!-- Content -->
 <div class="block">
