--- a/papers.html
+++ b/papers.html
@@ -16,8 +16,8 @@ layout: default
           <div class="section-content">
             <article class="event nearest">
               <figure class="date">
-                <div class="month">Dec</div>
-                <div class="day">10</div>
+                <div class="month">Feb</div>
+                <div class="day">17</div>
               </figure>
               <aside>
                 <header>
@@ -29,8 +29,8 @@ layout: default
             <br>
             <article class="event nearest">
               <figure class="date">
-                <div class="month">Feb</div>
-                <div class="day">12</div>
+                <div class="month">mar</div>
+                <div class="day">5</div>
               </figure>
               <aside>
                 <header>
@@ -41,8 +41,8 @@ layout: default
             <br>
             <article class="event nearest">
               <figure class="date">
-                <div class="month">Mar</div>
-                <div class="day">18</div>
+                <div class="month">apr</div>
+                <div class="day">1</div>
               </figure>
               <aside>
                 <header>
@@ -53,8 +53,8 @@ layout: default
             <br>
             <article class="event nearest-second">
               <figure class="date">
-                <div class="month">Apr</div>
-                <div class="day">5</div>
+                <div class="month">May</div>
+                <div class="day">1</div>
               </figure>
               <aside>
                 <header>
@@ -104,17 +104,17 @@ layout: default
             <a id="submit"><h2>Submission site</h2></a>
             <p>
             When you are ready to submit, please go to
-            <a href="https://cmt3.research.microsoft.com/FAB2019">
-               <b style="color:red"> https://cmt3.research.microsoft.com/FAB2019 </b>
+            <a href="https://cmt3.research.microsoft.com/FAB2020">
+               <b style="color:red">https://cmt3.research.microsoft.com/FAB2020 </b>
             </a>
             </p>
             <a id="submission"><h2>Submission categories</h2></a>
             <p>Authors can submit a paper in one of the following categories:</p>
             <ul class="topics-list">
-                <li><b>Research Papers</b> describe original research
+                <li><b>Research Papers</b> describe research
                     work in the broad area of blockchain. We solicit
-                    both long papers (up to 12 pages) and short papers (
-                    up to 6 pages). The former will tend to be
+                    both long papers (up to 8 pages) and short papers
+                    (up to 4 pages). The former will tend to be
                     descriptions of complete technical work, while the
                     latter will tend to be descriptions of interesting,
                     innovative ideas, which nevertheless require more
@@ -123,19 +123,14 @@ layout: default
                 <li><b>Industrial Papers</b> describing experiences with
                     the deployed and state-of-the-art blockchain
                     systems. These papers can also be either long papers
-                    (up to 12 pages) or short papers (up to 6 pages).
-                </li>
-                <li><b>Vision Papers</b> describe speculative but
-                    well-reasoned and thought-provoking essays. We will
-                    only consider short papers (up to 6 pages) in this
-                    category.
+                    (up to 8 pages) or short papers (up to 4 pages).
                 </li>
                 <li><b>Posters</b>. Researchers and practitioners
                     wishing to showcase and get feedback on work that is
                     in an early stage, and hence not yet ready for
                     publication as a paper, are invited to submit a
-                    proposal for a poster, optionally accompanied by a
-                    demo. All accepted papers are encouraged to showcase
+                    1-page proposal for a poster.
+                    All accepted papers are encouraged to showcase
                     a poster, too.
                 </li>
             </ul>
@@ -147,7 +142,17 @@ layout: default
             leading to insightful discussions. Submissions will be kept
             confidential. On rare occasions, long paper submissions may
             be accepted as short papers (pending authors’ approval and
-            significant shortening).
+            significant shortening).<BR><BR>
+
+	    
+            <a id="Informal Proceedings"><h2>Informal Proceedings</h2></a>
+            The symposium has no
+published proceedings. Presenting a paper
+at the symposium should not preclude submission to or
+publication in other venues (before, after or concurrently with
+FAB 2020). Papers presented at the workshop will be made available to
+workshop participants, but this does not constitute an official
+proceedings.
             </p>
 
             <a id="guidelines"><h2>Submission guidelines</h2></a>
@@ -186,8 +191,8 @@ layout: default
             </ul>
             <h3>Page limit</h3>
             <p>
-            Long papers can have up to <b>12 pages</b> while short
-            papers can be a maximum of <b>6 pages</b>. These limits
+            Long papers can have up to <b>8 pages</b> while short
+            papers can be a maximum of <b>4 pages</b>. These limits
             exclude references but include all other content (e.g.,
             appendices).
             </p>
@@ -195,20 +200,14 @@ layout: default
             <p>
             Following the list of author names and affiliations on the
             first page, submissions should include a line that specifies
-            the paper’s “type” (research, industrial, or vision) and
+            the paper’s “type” (research, industrial, or poster) and
             “length” (long or short).
             </p>
             <a id="submit"><h2>Deadlines</h2></a>
             <p>
             <b style="color:red">Submission
-                deadline: 10 December 2018</b><br> Papers must be
+                deadline: February 17, 2019</b><br> Papers must be
             submitted by this deadline to be reviewed.
-            </p>
-            <a id="submit"><h2>Questions?</h2></a>
-            <p>
-              Email any questions you have to the PC chairs at <b
-              <b style="color:black">shahram [at] usc [dot] edu</b> or
-              <b style="color:black">slaats [at] di [dot] ku [dot] dk</b>
             </p>
           </div><!-- /.section-content -->
         </section><!-- /.main-content -->
