registration info pending

--- a/registration.html
+++ b/registration.html
@@ -39,46 +39,7 @@ layout: default
           </header>
           <div class="section-content">
           <article>
-              <p>
-              Registration fees for FAB 2019 are shown below. Note that
-              early registration (discounted) is available until <b
-                  style="color:red">March 8, 2019</b> and regular registration
-                  is available until <b style="color:red">April 4, 2019</b>.
-              </p>
-
-              <div class="table-responsive">
-		    <table class="table table-hover course-list-table">
-			<thead>
-			<tr>
-			    <th>Type</th>
-			    <th>Early registration</th>
-			    <th>Regular registration</th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr>
-			    <th>Students</th>
-			    <th> Free </th>
-			    <th> Free </th>
-			</tr>
-			<tr>
-			    <th>General</th>
-			    <th>$ 75</th>
-			    <th>$ 75</th>
-			</tr>
-			</tbody>
-		    </table>
-              <p>
-              Attendees are requested to register for FAB 2019 using the
-              link below.
-              </p>
-               <a class="btn btn-large"
-                  href='https://www.eventbrite.com/e/second-international-symposium-on-foundations-and-applications-of-blockchain-tickets-57122632331'
-                  target='_blank' title='Symposium on Foundations and
-                  Applications of Blockchain 2019
-                  registration'><span
-                  id='regLink'>Register Now!</span>
-               </a>
+TBA.
           </article>
           </div><!-- /.section-content -->
         </section><!-- /.main-content -->
