update the date of notification and clarify short papers

--- a/camera-ready-instructions.html
+++ b/camera-ready-instructions.html
@@ -57,7 +57,8 @@ layout: default
             from the conference proceedings.
             </p>
             <h4 class="section-heading text-uppercase">Camera-ready Guidelines</h4>
-<h6 class ="section-heading"> These instructions are for the authors of accepted papers. We need the following by March 18th (11:59 PM (PDT)):</h6>
+<h6 class ="section-heading"> These instructions are for the authors
+of accepted papers. We need the following by April 1st (11:59 PM (PDT)):</h6>
 
 <div class="row">
 <div class="col-md-12 text-center">
