--- a/papers.html
+++ b/papers.html
@@ -30,7 +30,7 @@ layout: default
             <article class="event nearest">
               <figure class="date">
                 <div class="month">mar</div>
-                <div class="day">5</div>
+                <div class="day">9</div>
               </figure>
               <aside>
                 <header>
@@ -118,7 +118,10 @@ layout: default
                     descriptions of complete technical work, while the
                     latter will tend to be descriptions of interesting,
                     innovative ideas, which nevertheless require more
-                    work to mature.
+                    work to mature. For short papers, we also
+encourage submissions that put previously published work in a new
+light or describe extensions of previously published work by the
+authors. 
                 </li>
                 <li><b>Industrial Papers</b> describing experiences with
                     the deployed and state-of-the-art blockchain
