update the date of notification and clarify short papers

--- a/papers.html
+++ b/papers.html
@@ -118,7 +118,10 @@ layout: default
                     descriptions of complete technical work, while the
                     latter will tend to be descriptions of interesting,
                     innovative ideas, which nevertheless require more
-                    work to mature. For short papers, we also
+                    work to mature.
+		</li>
+		<li>
+		<u>For short papers,</u> we also
 encourage submissions that put previously published work in a new
 light or describe extensions of previously published work by the
 authors. 
