--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@ layout: default
 
             {% include topics.html %}
 
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@faisalsyn" />
+<meta name="twitter:creator" content="@faisalsyn" />
+<meta name="twitter:title" content="Symposium on
+Foundations and Applications of Blockchain 2020 (FAB '20)" />
+<meta name="twitter:description" content="Blockchain - the technology
+behind Bitcoin and Ethereum - is flourishing into an impressive
+spectrum of research projects and initiatives, corporate alliances,
+and startup companies. This multidisciplinary effort spans diverse
+disciplines ranging from Computer Science and Engineering to
+Communications, Social Sciences, Public Policy, Banking and Finance,
+Journalism, and Political Sciences to name a few. This one day event
+strives to bring researchers and practitioners of blockchain together
+to share and exchange results." />
+<meta name="twitter:image"
+content="https://scfab.github.io/2020/assets/img/ucsc-soe.jpg"/>
+
           </div><!-- /.section-content -->
         </section><!-- /.main-content -->
       </div><!-- /.col-md-6 -->
