--- a/index.html
+++ b/index.html
@@ -109,13 +109,8 @@ layout: default
 <meta name="twitter:creator" content="@faisalsyn" />
 <meta name="twitter:title" content="Symposium on
 Foundations and Applications of Blockchain 2020 (FAB '20)" />
-<meta name="twitter:description" content="Blockchain - the technology
-behind Bitcoin and Ethereum - is flourishing into an impressive
-spectrum of research projects and initiatives, corporate alliances,
-and startup companies. This multidisciplinary effort spans diverse
-disciplines ranging from Computer Science and Engineering to
-Communications, Social Sciences, Public Policy, Banking and Finance,
-Journalism, and Political Sciences to name a few. This one day event
+<meta name="twitter:description" content="The FAB '20 symposium is
+planned to be held in Santa Cruz on May 1st.  This one day event
 strives to bring researchers and practitioners of blockchain together
 to share and exchange results." />
 <meta name="twitter:image"
