twitter card to title with text

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ planned to be held in Santa Cruz on May 1st.  This one day event
 strives to bring researchers and practitioners of blockchain together
 to share and exchange results." />
 <meta name="twitter:image"
-content="https://scfab.github.io/2020/assets/img/ucsc-soe.jpg"/>
+content="https://scfab.github.io/2020/assets/img/ucsc-soe_with_text.png"/>
 
           </div><!-- /.section-content -->
         </section><!-- /.main-content -->
