--- a/program-committee.html
+++ b/program-committee.html
@@ -30,6 +30,19 @@ layout: default
          <div class="row">
  <div class="col-md-12 text-center">
  <ul class="text-left" style="display:inline-block;vertical-align:middle;">
+  <li>Basem Shihada, King Abdullah University of Science and
+Technology (KAUST)</li>
+  <li>Carsten Binnig, TU Darmstadt</li>
+  <li>Cormac Flanagan, UC Santa Cruz</li>
+  <li>Cristina Nita-Rotaru, Northeastern University</li>
+  <li>Dinh Tien Tuan Anh, National Univesrity of Singapore</li>
+  <li>Dongfang Zhao, University of Nevada, Reno</li>
+  <li>Ethan Cecchetti, Cornell University</li>
+  <li>Fan Zhang, Cornell University</li>
+  <li>Ittay Eyal, Technion</li>
+  <li>Jianliang Xu, Hong Kong Baptist University (HKBU)</li>
+  <li>Kartik Nayak, Duke University</li>
+  <li>Shrutarshi Basu, Harvard University</li>
  </ul>
  </div>
  </div>
