added Dahlia's keynote info

--- a/keynotes.html
+++ b/keynotes.html
@@ -12,6 +12,10 @@ layout: default
     <section id="main-content">
       <div class="section-content">
         <h2>Keynote Speakers</h2>
+
+        {% include keynote-speaker.html key="dahlia"
+        photo="assets/img/dahlia.jpg" %}
+
       </div><!-- /.section-content -->
     </section><!-- /.main-content -->
   </div><!-- /.col-md-9 -->
