--- a/papers.html
+++ b/papers.html
@@ -215,7 +215,8 @@ proceedings.
             <a id="submit"><h2>Deadlines</h2></a>
             <p>
             <b style="color:red">Submission
-                deadline: February 17, 2019</b><br> Papers must be
+                deadline: February 17, 2020 (11:59 PM Anywhere on
+Earth (AoE)</b><br> Papers must be
             submitted by this deadline to be reviewed.
             </p>
           </div><!-- /.section-content -->
