--- a/papers.html
+++ b/papers.html
@@ -214,9 +214,14 @@ proceedings.
             </p>
             <a id="submit"><h2>Deadlines</h2></a>
             <p>
-            <b style="color:red">Submission
+            <b style="color:red">Abstract Submission
                 deadline: February 17, 2020 (11:59 PM Anywhere on
-Earth (AoE)</b><br> Papers must be
+Earth (AoE)</b><br>
+            <b style="color:red">Submission
+                deadline: <strike>February 17</strike> (extended till
+February 21), 2020 (11:59 PM Anywhere on
+Earth (AoE)</b><br>
+		Papers must be
             submitted by this deadline to be reviewed.
             </p>
           </div><!-- /.section-content -->
