--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@ layout: default
               <aside>
                 <header>
                     <!-- <strike>Paper submission deadline</strike> -->
+                  Abstract submission deadline
+                </header>
+              </aside>
+            <article class="event nearest">
+              <figure class="date">
+                <div class="month">feb</div>
+                <div class="day">21</div>
+              </figure>
+              <aside>
+                <header>
+                    <!-- <strike>Paper submission deadline</strike> -->
                   Paper submission deadline
                 </header>
               </aside>
