--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ layout: default
                   Abstract submission deadline
                 </header>
               </aside>
+            </article><!-- /article -->
+            <br>
             <article class="event nearest">
               <figure class="date">
                 <div class="month">feb</div>
