covid related updates

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
             <article class="event nearest">
               <figure class="date">
                 <div class="month">apr</div>
-                <div class="day">1</div>
+                <div class="day">16</div>
               </figure>
               <aside>
                 <header>
@@ -99,6 +99,22 @@ layout: default
       <div class="col-md-6">
         <section id="main-content">
           <div class="section-content">
+
+<header><h2>Updates in Relation to COVID-19</h2></header>
+<p>
+Due to the circumstances related to the COVID-19 outbreak, FAB 2020
+is going to be a fully virtual event on May 1, 2020. Authors were
+asked to prepare videos of their presentations that will be uploaded
+to be viewed online on May 1st. A discussion platform will be used
+for Questions and Answers sessions and general discussions related to
+the presented papers and keynotes. We will post updates about the
+program in we approach the symposium day. Please register if you plan
+to participate in the event to get the most recent updates. Registration
+will be open soon free of
+charge. 
+</p>
+
+
             <header><h2>Third International Symposium on Foundations and Applications of
                     Blockchain 2020 (FAB '20)</h2></header>
             <p>
