--- a/registration.html
+++ b/registration.html
@@ -13,7 +13,7 @@ layout: default
           <header>
             <h2>Dates</h2>
           </header>
-          <div class="section-content">
+<!--          <div class="section-content">
             <article class="event nearest">
               <figure class="date">
                 <div class="month">apr</div>
@@ -26,7 +26,7 @@ layout: default
               </aside>
             </article>
 			<br>
-          </div>
+          </div>-->
         </section><!-- /.events-small -->
 
        <br/>
@@ -39,7 +39,14 @@ layout: default
           </header>
           <div class="section-content">
           <article>
-TBA.
+FAB 2020 is going to be an online, live event. Registration to the
+event is free. We will email all registrants details of participating
+in the event such as the web links to access the live stream and the
+discussion forum.
+<BR><BR>
+Registration link: <a
+href="https://www.eventbrite.com/e/102630478524/">https://www.eventbrite.com/e/102630478524/</a>
+<BR><BR>
           </article>
           </div><!-- /.section-content -->
         </section><!-- /.main-content -->
