--- a/registration.html
+++ b/registration.html
@@ -40,7 +40,7 @@ layout: default
           <div class="section-content">
           <article>
 FAB 2020 is going to be an online, live event. Registration to the
-event is free. We will email all registrants details of participating
+event is free. We will email all registrants details of participation
 in the event such as the web links to access the live stream and the
 discussion forum.
 <BR><BR>
