--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@ layout: default
 
 <header><h2>Updates in Relation to COVID-19</h2></header>
 <p>
+UPDATE (April 17): The FAB 2020 program will be streamed online. We
+will use Zoom for streaming the presentations and asking questions
+live. We will also have a slack channel for further discussions
+between the attendees and the authors. The links to both Zoom and
+Slack for FAB 2020 will be posted soon.
+
+<BR><BR>
 Due to the circumstances related to the COVID-19 outbreak, FAB 2020
 is going to be a fully virtual event on May 1, 2020. Authors were
 asked to prepare videos of their presentations that will be uploaded
