try schedule table

--- a/schedule.html
+++ b/schedule.html
@@ -63,6 +63,15 @@ Sergio Sparviero (University of Salzburg)
 link to the Zoom meeting will be posted on the day of the event. The
 full schedule will be posted here soon. The program will start at 9am
 and end at 4:30pm on May 1st.
+<BR><BR>
+<table>
+  <tr>
+    <td>Time</td><td>Session</td>
+  </tr>
+  <tr>
+    <td>9 AM</td><td>First Keynote</td>
+  <tr>
+</table>
       </div><!-- /.section-content -->
     </section><!-- /.main-content -->
   </div><!-- /.col-md-9 -->
