--- a/schedule.html
+++ b/schedule.html
@@ -63,9 +63,8 @@ Sergio Sparviero (University of Salzburg)
         <h2>Symposium Schedule</h2>
         <br><br>
         The symposium will be held online and live using Zoom. The
-link to the Zoom meeting will be posted on the day of the event. The
-full schedule will be posted here soon. The program will start at 9am
-and end at 4:30pm on May 1st.
+link to the Zoom meeting will be posted on the day of the event and
+sent to the registrants emails. 
 <BR><BR>
         {% include session.html date="Friday, May 1st" key="day1"
         showlinks="true" %}
