--- a/schedule.html
+++ b/schedule.html
@@ -66,7 +66,8 @@ Sergio Sparviero (University of Salzburg)
 link to the Zoom meeting will be posted on the day of the event and
 sent to the registrants emails. 
 <BR><BR>
-        {% include session.html date="Friday, May 1st" key="day1"
+        {% include session.html date="Friday, May 1st (All times in
+Pacific Time)" key="day1"
         showlinks="true" %}
       </div><!-- /.section-content -->
     </section><!-- /.main-content -->
