slack channel link

--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@ layout: default
 
 <header><h2>Virtual Event Information</h2></header>
 See you at the virtual event soon!<BR>
-All attendees will receive an email with the zoom webinar link
-to attend the virtual event. <BR>
+We sent an email to all attendees with the zoom webinar link
+to attend the virtual event. (New registrations will have the zoom
+link in the confirmation email). <BR>
 The zoom webinar link is also available in the event's slack
 channel, where we will also hold discussions among attendees,
 presenters, and keynote speakers: <a href="https://join.slack.com/t/fab-symposium/shared_invite/zt-dwlmd0j8-YkepY19m53U9nhhmknNI~g">FAB 2020 slack channel</a>
+<BR><BR>
 
 <header><h2>Updates in Relation to COVID-19</h2></header>
 <p>
