--- a/accepted-papers.html
+++ b/accepted-papers.html
@@ -17,43 +17,55 @@ layout: default
 Networks<BR>
 	Authors: xiaoxue zhang (University of California, Santa
 Cruz)*; Shouqian Shi (University of California, Santa Cruz); Chen
-Qian (University of California, Santa Cruz)<br><br>
+Qian (University of California, Santa Cruz)<BR>
+        <a href="./FAB2020_p1.pdf">paper</a>
+        <br><br>
 	
 	2. ResilientDB: Global Scale Resilient Blockchain Fabric<BR>
 	Authors: Suyash Gupta (University of California Davis)*;
 Sajjad Rahnama (University of California Davis); Jelle Hellings
 (University of California Davis); Mohammad Sadoghi (University of
-California, Davis)<BR><BR>
+California, Davis)<BR>
+        <a href="./FAB2020_p2.pdf">paper</a>
+        <br><br>
 
 	3. Decentralized Markets Evaluating Uniform and Non-Uniform
 prices<BR>
-	Authors: Jason Vranek (UCSC)*; Yilin Li (UCSC)<BR><BR>
+	Authors: Jason Vranek (UCSC)*; Yilin Li (UCSC)<BR>
+        <a href="./FAB2020_p3.pdf">paper</a>
+        <br><br>
+
 	4. Securing Smart Contracts with Information Flow<BR>
 	Authors: Ethan Cecchetti (Cornell University)*; Siqiu Yao
 (Cornell University); Haobin Ni (Cornell University); Andrew Myers
-(Cornell University)<BR><BR>
+(Cornell University)<BR>
+        <a href="./FAB2020_p4.pdf">paper</a>
+        <br><br>
 
 	5. An analysis of the market risk to participants in the
 Compound protocol<BR>
 	Authors: Hsien-Tang Kao (Gauntlet)*; Tarun Chitra (Gauntlet);
-Rei Chiang (Gauntlet); John Morrow (Gauntlet)<BR><BR>
+Rei Chiang (Gauntlet); John Morrow (Gauntlet)<BR>
+        <a href="./FAB2020_p5.pdf">paper</a>
+        <br><br>
+
 
 	6. On Stablecoins: Stability Mechanisms and Use Cases for
 Real People<BR>
 	Authors: Nathaniel Fowler (California Polytechnic State
 University, San Luis Obispo); Eric Cuellar (California Polytechnic
 State University, San Luis Obispo )*; Zachary Peterson (Cal Poly, San
-Luis Obispo)<BR><BR>
+Luis Obispo)<BR>
+        <a href="./FAB2020_p6.pdf">paper</a>
+        <br><br>
+
 
 	7. TrustDBle: Towards Trustable Shared Databases<BR>
 	Authors: Muhammad El-Hindi (TU Darmstadt)*; Carsten Binnig
 (TU Darmstadt); Simon Karrer (TU Darmstadt); Gloria Doci (TU
-Darmstadt)<BR><BR>
-
-	8. The legitimacy challenge of cryptocurrencies: a contested
-field<BR>
-	Authors: NIna van der Giessen (University of Salzburg)*;
-Sergio Sparviero (University of Salzburg)
+Darmstadt)<BR>
+        <a href="./FAB2020_p7.pdf">paper</a>
+        <br><br>
 
 	<br><br>
       </div><!-- /.section-content -->
